# TabuSearch

./: CMakeLists.txt  README.md  Sprawozdanie.html  Sprawozdanie.md  style.css
cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  pea
resources/: zi929.tsp
src/: main.cpp
src/FileLoader/: FileLoader.cpp  FileLoader.hpp
src/algorithms/: TabuHolder.cpp  TabuHolder.hpp
src/algorithms/GreedyAlg/: GreedyAlg.cpp  GreedyAlg.hpp
src/algorithms/TabuSearch/: TabuSearch.cpp  TabuSearch.hpp
src/algorithms/tabusearch/: TabuSearch.cpp  TabuSearch.hpp
src/algorithms/threading/: ThreadManager.cpp  ThreadManager.hpp
src/algorithms/ui/: CommandLineInterface.cpp  CommandLineInterface.hpp
src/threading/: ThreadManager.cpp  ThreadManager.hpp
src/ui/: CommandLineInterface.cpp
